# auto-coder

./: .cursorignore  .flake8  .gitignore  .pre-commit-config.yaml  .spanignore  ASSESSMENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_CHECKLIST.md  OPEN_SOURCE_READINESS.md  README.md  README_EN.md  config.default.json  constants.py  count_node.py  count_utils.py  custom_type.py  example_execute_script.py  execute_custom_type.py  execute_execute_node.py  execute_execute_tool.py  execute_plan_node.py  execute_plan_utils.py  execute_replan_node.py  execute_replan_utils.py  execute_zgraph.py  main.py  pyproject.toml  requirements.txt  review_node.py  review_tool.py  setup.py  密码输入说明.md  技术参考.md  编码问题解决方案.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: README.md
script/: script.sh
sim_sdk/: sim_cursor_agent.sh  sim_sdk.py
tests/: README.md  __init__.py  conftest.py  test_constants.py  test_count_node.py  test_custom_type.py  test_execute_execute_tool.py  test_execute_plan_utils.py  test_execute_replan_utils.py  test_review_tool.py
